--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,4 +7,8 @@
     <h1 class="text-danger">Welcome on your project 3</h1>
 
     <img src="https://media.giphy.com/media/hS58Kb2OOCMPS/giphy.gif" alt="Dewey dancing">
+
+    <div>
+        <a href="{{ path('project_new') }}">Make a request</a>
+    </div>
 {% endblock %}
