--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ProjectController!{% endblock %}
+{% block title %}Wanna Gonna - Project{% endblock %}
 
 {% block body %}
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button>Create a request</button>
-    {{ form_end(form) }}
+    {% for project in projects %}
+        {{ project.title }}
+        <br>
+    {% endfor %}
 {% endblock %}
