--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,8 +1,12 @@
-@import "~bootstrap/scss/bootstrap";
 @import 'variables.scss';
 @import "~bootstrap/scss/bootstrap";
+@import 'web-home';
 
-body {
-    background-color: $wild-color;
-    color: $light;
+#form-register{
+  margin-top :100px;
 }
+
+
+
+
+
