--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,12 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Wanna Gonna{% endblock %}
 
-{% block body %}
-    <h1 class="text-danger">Welcome on your project 3</h1>
-    <img src="https://media.giphy.com/media/hS58Kb2OOCMPS/giphy.gif" alt="Dewey dancing">
-
-    <div>
-        <a href="{{ path('project_new') }}">Make a request</a>
+{% block content %}
+<div id="home-content">
+    {% include 'component/_intro.html.twig' %}
+    {% include 'component/_concept.html.twig' %}
+    {% include 'component/_whoweare.html.twig' %}
+    {% include 'component/_skillcloud.html.twig' %}
+    {% include 'component/_howdoesitwork.html.twig' %}
+    {% include 'component/_homecarousel.html.twig' %}
+    {% include 'component/_questionsanswers.html.twig' %}
     </div>
 {% endblock %}
