form titles, carroussel scroll, image url

--- a/templates/component/_homecarousel.html.twig
+++ b/templates/component/_homecarousel.html.twig
@@ -1,5 +1,4 @@
-<scroll-page id="home-carousel">
-<div class="carousel slide" data-ride="carousel">
+<div class="carousel slide" id="home-carousel" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -37,4 +36,3 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
-</scroll-page>
