--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -11,7 +11,7 @@
         <div id="concept" class="home-section container bg-light col-sm-10 rounded mb-5 p-4 shadow">
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-sm-12">
-                    <h1 class="text-primary">Submit a request for a new project</h1>
+                    <h1 class="text-primary">Register</h1>
 
                     {% form_theme registrationForm 'bootstrap_4_layout.html.twig' %}
                     {{ form_start(registrationForm) }}
