--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -8,7 +8,7 @@
         <div id="concept" class="home-section container bg-light col-sm-10 rounded mb-5 p-4 shadow">
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-sm-12">
-                    <h1 class="text-primary">Register</h1>
+                    <h1 class="text-primary">Create a new request</h1>
                     {% form_theme form 'bootstrap_4_layout.html.twig' %}
                     {{ form_start(form) }}
                     {{ form_widget(form) }}
