--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -1,24 +1,30 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Wanna Gonna - Project{% endblock %}
-
 {% block content %}
-    {% for project in projects %}
-        <span><a href="{{ path('project_show', {'id' : project.id}) }}">{{ project.title }} </a>- </span>
-        <span>{{ project.description }} - </span>
-        <span> Project status :  {{ (project.status == 0)? 'Request' : 'Validate project' }} - </span>
-        {% for sdg in project.sdgs %}
-            <span>SDG : {{ sdg.name }}</span>
-        {% endfor %}
-        <table>
-            <tr>
-                <td><a href="{{ path('project_edit', {'id' : project.id}) }}">Edit</a></td>
-            </tr>
-            <tr>
-                <td>{{ include('project/_delete_form.html.twig') }}</td>
-            </tr>
-        </table>
-        <br>
-    {% endfor %}
 
+    <div class="form-register row justify-content-sm-center align-content-center">
+        <div id="concept" class="home-section container bg-light col-sm-10 rounded mb-5 p-4 shadow">
+            <div class="row justify-content-center">
+                <div class="col-lg-8 col-sm-12">
+                    <h1 class="text-primary">Project List</h1>
+                    {% for project in projects %}
+                        <p class="h2"><a href="{{ path('project_show', {'id' : project.id}) }}">{{ project.title }} </a>- </p>
+                        <p>{{ project.description }} - </p>
+                        <p> Project status :  {{ (project.status == 0)? 'Request' : 'Validate project' }} - </p>
+                        {% for sdg in project.sdgs %}
+                            <p>SDG : {{ sdg.name }}</p>
+                        {% endfor %}
+                        <table>
+                            <tr>
+                                <td><a href="{{ path('project_edit', {'id' : project.id}) }}">Edit</a></td>
+                                <td>{{ include('project/_delete_form.html.twig') }}</td>
+                            </tr>
+                        </table>
+                        <br>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
