--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -11,19 +11,11 @@
         <div id="concept" class="home-section container bg-light col-sm-10 rounded mb-5 p-4 shadow">
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-sm-12">
-                    <h1 class="text-primary">Register</h1>
-
+                    <h1 class="text-primary">Register as a {{ (app.request.attributes.get('_route') == 'app_register') ? 'Member' : 'Organization' }}</h1>
                     {% form_theme registrationForm 'bootstrap_4_layout.html.twig' %}
                     {{ form_start(registrationForm) }}
-                    {{ form_row(registrationForm.firstname) }}
-                    {{ form_row(registrationForm.lastname) }}
-                    {{ form_row(registrationForm.email) }}
-                    {{ form_row(registrationForm.plainPassword, {
-                        label: 'Password'
-                    }) }}
-                    {{ form_row(registrationForm.agreeTerms) }}
-
-                    <button type="submit" class="btn">Register</button>
+                    {{ form_widget(registrationForm) }}
+                    <button type="submit" class="btn btn-primary">Register</button>
                     {{ form_end(registrationForm) }}
                 </div>
             </div>
