--- a/templates/component/_header.html.twig
+++ b/templates/component/_header.html.twig
@@ -41,8 +41,14 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Contact us</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('app_register') }}">Create Account</a>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Create Account
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="{{ path('app_register') }}">As a member</a>
+                    <a class="dropdown-item" href="{{ path('app_register_organization') }}">As an organization</a>
+                </div>
             </li>
             <li class="nav-item">
                 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
