--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -6,13 +6,26 @@
     {% for project in projects %}
         <span><a href="{{ path('project_show', {'id' : project.id}) }}">{{ project.title }} </a>- </span>
         <span>{{ project.description }} - </span>
-        <span> Project status :  {{ (project.status == 0)? 'Request' : 'Validate project' }} - </span>
+
+            {% if project.status == 0 %}
+            <span>Project status : Request Send - </span>
+            {% elseif project.status == 1 %}
+            <span>Project status : Request Validated - </span>
+            {% elseif project.status == 2 %}
+            <span>Project status : Open - </span>
+            {% elseif project.status == 3 %}
+            <span>Project status : Closed - </span>
+            {% endif %}
+
         {% for sdg in project.sdgs %}
             <span>SDG : {{ sdg.name }}</span>
         {% endfor %}
         <table>
             <tr>
                 <td><a href="{{ path('project_edit', {'id' : project.id}) }}">Edit</a></td>
+            </tr>
+            <tr>
+                <td><a href="{{ path('project_change_status', {'id' : project.id}) }}">Change status</a></td>
             </tr>
             <tr>
                 <td>{{ include('project/_delete_form.html.twig') }}</td>
