--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -5,7 +5,17 @@
 {% block content %}
     <span>{{ project.title }} - </span>
     <span>{{ project.description }} - </span>
-    <span> Project status :  {{ (project.status == 0)? 'Request' : 'Validate project' }} - </span>
+
+    {% if project.status == 0 %}
+        <span>Project status : Request Send - </span>
+    {% elseif project.status == 1 %}
+        <span>Project status : Request Validated - </span>
+    {% elseif project.status == 2 %}
+        <span>Project status : Open - </span>
+    {% elseif project.status == 3 %}
+        <span>Project status : Closed - </span>
+    {% endif %}
+
     {% for sdg in project.sdgs %}
         <span>SDG : {{ sdg.name }}</span>
     {% endfor %}
