--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -5,17 +5,10 @@
 {% block content %}
     {% for project in projects %}
         <span><a href="{{ path('project_show', {'id' : project.id}) }}">{{ project.title }} </a>- </span>
+
         <span>{{ project.description }} - </span>
 
-            {% if project.status == 0 %}
-            <span>Project status : Request Send - </span>
-            {% elseif project.status == 1 %}
-            <span>Project status : Request Validated - </span>
-            {% elseif project.status == 2 %}
-            <span>Project status : Open - </span>
-            {% elseif project.status == 3 %}
-            <span>Project status : Closed - </span>
-            {% endif %}
+        <form action="{{ path('status_closed', {'id' : project.id}) }}" method="post"><button>Close the project</button></form>
 
         {% for sdg in project.sdgs %}
             <span>SDG : {{ sdg.name }}</span>
@@ -24,9 +17,7 @@
             <tr>
                 <td><a href="{{ path('project_edit', {'id' : project.id}) }}">Edit</a></td>
             </tr>
-            <tr>
-                <td><a href="{{ path('project_change_status', {'id' : project.id}) }}">Change status</a></td>
-            </tr>
+
             <tr>
                 <td>{{ include('project/_delete_form.html.twig') }}</td>
             </tr>
