--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -3,6 +3,11 @@
 {% block title %}Wanna Gonna - Project{% endblock %}
 
 {% block content %}
+<div class="form-register row justify-content-sm-center align-content-center">
+    <div id="concept" class="home-section container bg-light col-sm-10 rounded mb-5 p-4 shadow">
+        <div class="row justify-content-center">
+            <div class="col-lg-8 col-sm-12">
+                <h1 class="text-primary">Project List</h1>
     {% for project in projects %}
         <span><a href="{{ path('project_show', {'id' : project.id}) }}">{{ project.title }} </a>- </span>
 
