--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -3,30 +3,40 @@
 {% block title %}Wanna Gonna - {{ project.title }}{% endblock %}
 
 {% block content %}
-    <span>{{ project.title }} - </span>
-    <span>{{ project.description }} - </span>
+    <div class="form-register row justify-content-sm-center align-content-center">
+        <div id="concept" class="home-section container bg-light col-sm-10 rounded mb-5 p-4 shadow">
+            <div class="row justify-content-center">
+                <div class="col-lg-8 col-sm-12">
+                     <h1 class="text-primary">{{ project.title }}</h1>
+                        <span>{{ project.description }} - </span>
 
-    {% if project.status == 0 %}
-        <span>Project status : Request Send - </span>
-    {% elseif project.status == 1 %}
-        <span>Project status : Request Validated - </span>
-    {% elseif project.status == 2 %}
-        <span>Project status : Open - </span>
-    {% elseif project.status == 3 %}
-        <span>Project status : Closed - </span>
-    {% endif %}
+                            {% if project.status == 0 %}
+                                <span>Project status : Request Send - </span>
+                            {% elseif project.status == 1 %}
+                                <span>Project status : Request Validated - </span>
+                            {% elseif project.status == 2 %}
+                                <span>Project status : Open - </span>
+                            {% elseif project.status == 3 %}
+                                <span>Project status : Closed - </span>
+                            {% endif %}
 
-    {% for sdg in project.sdgs %}
-        <span>SDG : {{ sdg.name }}</span>
-    {% endfor %}
-    <table>
-        <tr>
-            <td><a href="{{ path('project_edit', {'id' : project.id}) }}">Edit</a></td>
-        </tr>
-        <tr>
-            <td>{{ include('project/_delete_form.html.twig') }}</td>
-        </tr>
-    </table>
-    <br>
+                            {% for sdg in project.sdgs %}
+                                <span>SDG : {{ sdg.name }}</span>
+                            {% endfor %}
+                            <table>
+                                <tr>
+                                    <td><a href="{{ path('project_edit', {'id' : project.id}) }}">Edit</a></td>
+                                </tr>
+                                <tr>
+                                    <td>{{ include('project/_delete_form.html.twig') }}</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <form action="{{ path('status_closed', {'id' : project.id}) }}" method="post">
+                                            <button>Close the project</button>
+                                        </form>
+                                    </td>
+                                </tr>
+                            </table>
     <a href="{{ path('project_index') }}">Back to the list</a>
 {% endblock %}
