--- a/templates/project/edit.html.twig
+++ b/templates/project/edit.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Hello ProjectController!{% endblock %}
 
 {% block content %}
-    <div id="form-register" class="row justify-content-sm-center align-content-center">
+    <div class="form-register row justify-content-sm-center align-content-center">
         <div id="concept" class="home-section container bg-light col-sm-10 rounded mb-5 p-4 shadow">
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-sm-12">
