--- a/templates/component/_header.html.twig
+++ b/templates/component/_header.html.twig
@@ -27,7 +27,7 @@
                     Projects
                 </a>
                 <div id="home-menu" class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Explore the Projects</a>
+                    <a class="dropdown-item" href="{{ path('project_index') }}">Explore the Projects</a>
                     <a class="dropdown-item" href="{{ path('project_new') }}">Submit your own</a>
                 </div>
             </li>
