--- a/templates/task/index.html.twig
+++ b/templates/task/index.html.twig
@@ -12,16 +12,40 @@
             </div>
     {% for task in project.tasks %}
 <div class="flex-row">
-        <div class="card task m-1" style="width: 12rem;">
+        <div class="card task m-1" style="width: 18rem;">
             <div class="card-body">
+
+                {% if task.status == 0 %}
+                    <span class="bg-danger text-light mb-1">Pending attribution </span>
+
+                {% elseif task.status == 1 %}
+                    <span class="bg-info text-light mb-1">In progress </span>
+                {% elseif task.status == 2 %}
+                    <span class="bg-success text-light mb-1">Achieved </span>
+                  <small class="card-subtitle text-muted"> on : <cite>{{ task.updatedAt|date('Y-m-d') }}</cite></small>
+                {% endif %}
+
                 <h5 class="card-title">{{ task.name }}</h5>
-                <h6>Attributed to : {% for user in task.users %}
-                        <cite>{{ user.firstname }}</cite>
-                    {% endfor %}</h6>
-                <h6 class="card-subtitle mb-2 text-muted">Created on : <cite>{{ task.createdAt|date('Y-m-d') }}</cite></h6>
-                {# <h6 class="card-subtitle mb-2 text-muted">Updated on : {{ task.createdAt === task.upadtedAt ? '' : task.updatedAt|date('Y-m-d') }}</h6> #}
+
+                {% if task.status == 0 or task.status == 1%}
                 <p class="card-text">{{ task.description }}</p>
-                <a href="{{ path('project_task_edit', {'idTask': task.id}) }}" class="card-link">edit</a>
+
+                  <p>  <small class="card-subtitle text-muted">Attributed to : {% for user in task.users %}
+                            <cite>{{ user.firstname }}</cite>
+                        {% endfor %}</small></p>
+                   <p> <small class="card-subtitle text-muted">Created on : <cite>{{ task.createdAt|date('Y-m-d') }}</cite></small></p>
+
+                <a class="card-link btn" href="{{ path('project_task_edit', {'idTask': task.id}) }}">edit</a>
+                {% endif %}
+
+                {% if task.status == 0 %}
+                    <form action="{{ path('status_attributTask', {'id' : task.id}) }}" method="post"><button class="card-link btn">Attribute this task</button></form>
+
+                {% endif %}
+
+                {% if task.status == 1 %}
+                    <form action="{{ path('status_achievedTask', {'id' : task.id}) }}" method="post"><button class="card-link btn">Close the task</button></form>
+                {% endif %}
 
             </div>
         </div>
