RM2 As a Member, i want to propose my support

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,8 +18,7 @@
 	</head>
 	<body>
 	{% include 'component/_header.html.twig' %}
+	{% include 'component/_flashes.html.twig' %}
 	{% block content %}{% endblock %}
-
-
 	</body>
 </html>
