--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -19,11 +19,12 @@
         {% for sdg in project.sdgs %}
             <span>SDG : {{ sdg.name }}</span>
         {% endfor %}
-
-        {% if app.user.isParticipantOn(project) %}
-            <p>Your demand was already sent</p>
-        {% else %}
-            <a href="{{ path('project_participant_project', {'project': project.id }) }}">Participe</a>
+        {% if app.user %}
+            {% if app.user.isParticipantOn(project) %}
+                <p>Your demand was already sent</p>
+            {% else %}
+                <a href="{{ path('project_participant_project', {'project': project.id }) }}">Participe</a>
+            {% endif %}
         {% endif %}
 
 
