--- a/templates/component/_header.html.twig
+++ b/templates/component/_header.html.twig
@@ -39,7 +39,7 @@
         <ul class="navbar-nav text-blueish form-inline">
 
             <li class="nav-item">
-                <a class="nav-link" href="{{ path('dashboard') }}">Dashboard</a>
+                <a class="nav-link" href="{{ path('dashboard_index') }}">Dashboard</a>
             </li>
             {% if not is_granted('IS_AUTHENTICATED_FULLY') %}
             <li class="nav-item dropdown">
