Fix links and displays

--- a/templates/component/dashboard/_userprofile.html.twig
+++ b/templates/component/dashboard/_userprofile.html.twig
@@ -42,7 +42,7 @@
     </tr>
     <tr>
         <td>
-            Country : {{ (user.country.name != null ? user.country.name : 'Add a country') }}
+            Country : {{ (user.country != null ? user.country.name : 'Add a country') }}
         </td>
     </tr>
     <tr>
