--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -9,7 +9,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-sm-12">
                     <h1 class="text-primary">Project List</h1>
-                    {% include 'component/project/_project_list.html.twig' %}
+                    {% include 'component/_project_list.html.twig' %}
                 </div>
             </div>
         </div>
