--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -5,7 +5,7 @@
     <div id="concept" class="home-section container bg-light col-sm-10 rounded mb-5 p-4 shadow">
         <div class="row justify-content-center">
             <div class="col-lg-8 col-sm-12">
-                <h1 class="text-primary">Edit my profil</h1>
+                <h1 class="text-primary">Edit my profile</h1>
 {{ form_start(form) }}
 {{ form_widget(form) }}
 <button class="btn btn-primary">Submit my modification</button>
