--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,7 +7,7 @@
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
 
-    <div class="row justify-content-sm-center vh-100 align-content-center">
+    <div class=" form-register row justify-content-sm-center vh-100 align-content-center">
         <div id="concept" class="home-section container bg-light col-sm-10 rounded mb-5 p-4 shadow">
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-sm-12">
