--- a/templates/component/project/_project_members.html.twig
+++ b/templates/component/project/_project_members.html.twig
@@ -1,6 +1,31 @@
-<h3>They are currently contributing to this project</h3>
+<h6>The current project owner</h6>
 <ul>
     {% for participant in project.participants %}
-        <li>{{ participant.role }} - {{ participant.user.firstname }}</li>
+        {% if participant.role == constant('App\\Entity\\Participant::ROLE_PROJECT_OWNER') %}
+            <li>{{ participant.role }} - {{ participant.user.firstname }}</li>
+        {% endif %}
     {% endfor %}
 </ul>
+<h6>They are currently contributing to this project</h6>
+<ul>
+    {% for participant in project.participants %}
+        {% if participant.role == constant('App\\Entity\\Participant::ROLE_VOLUNTEER') %}
+            <li>{{ participant.role }} - {{ participant.user.firstname }}</li>
+        {% endif %}
+    {% endfor %}
+</ul>
+<h6>They are currently waiting to be accepted on this project</h6>
+{% for participant in project.participants %}
+    <ul>
+        {% if participant.role == constant('App\\Entity\\Participant::ROLE_WAITING_VOLUNTEER') %}
+            <li>
+                <span>{{ participant.role }} - {{ participant.user.firstname }}</span>
+                <form method="post" action="{{ path('project_participant_project_accepted', {'project': participant.project.id, 'user': participant.user.id}) }}">
+                    <button class="btn btn-secondary">OK</button>
+                </form>
+                <span><a href="#">NOK</a></span>
+            </li>
+        {% endif %}
+    </ul>
+{% endfor %}
+
