--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -62,12 +62,11 @@
                 <div>
                     {% if app.user %}
                         {% if app.user.isParticipantOn(project) %}
-                            <p>Your demand was already sent</p>
+                            <p class="alert-info">{{ app.user.getProjectRoleMessage(project) }}</p>
                         {% else %}
-
                             <a href="{{ path('project_participant_project', {'project': project.id }) }}">
-                                <button class="btn btn-secondary text-light m-3">Participate</button></a>
-
+                                <button class="btn btn-secondary text-light m-3">Participate</button>
+                            </a>
                         {% endif %}
                     {% endif %}
                 </div>
