Code Review Injection dependance + Stats Provider + Entity Stats + overflow homepage

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,8 +17,11 @@
 		{% endblock %}
 	</head>
 	<body>
-	{% include 'component/_header.html.twig' %}
+	{% include 'component/homepage/_header.html.twig' %}
 	{% include 'component/_flashes.html.twig' %}
-	{% block content %}{% endblock %}
+	{% block content %}
+
+
+	{% endblock %}
 	</body>
 </html>
