--- a/templates/component/dashboard/_user_participations.html.twig
+++ b/templates/component/dashboard/_user_participations.html.twig
@@ -1,4 +1,4 @@
-{% for participation in participations %}
+{% for participation in app.user.participants %}
     <div class="d-flex row justify-content-between">
         <div class="col-10">
             <p>
