--- a/templates/component/homepage/_whoweare.html.twig
+++ b/templates/component/homepage/_whoweare.html.twig
@@ -10,22 +10,22 @@
         <div id="top-stats" class="d-flex justify-content-around">
             <div class="d-flex flex-column align-content-center text-center col my-4">
                 <div><img src="{{ asset('build/images/icon-members.svg') }}" class="home-svg" height="50" alt="Projects"></div>
-                <p class="h4">{{ stats.0 }}</p>
+                <p class="h4">{{ stats.volunteerTotal }}</p>
                 <p class="h5">Volunteers</p>
             </div>
             <div class="d-flex flex-column align-content-center text-center col my-4">
                 <div><img src="{{ asset('build/images/icon-projects.svg') }}" class="home-svg" height="50" alt="Projects"></div>
-                <p class="h4">{{ stats.1 }}</p>
+                <p class="h4">{{ stats.onGoingProjectTotal }}</p>
                 <p class="h5">Projects</p>
             </div>
             <div class="d-flex flex-column align-content-center text-center col my-4">
                 <div><img src="{{ asset('build/images/icon-countries.svg') }}" class="home-svg" height="50" alt="Projects"></div>
-                <p class="h4">{{ stats.2 }}</p>
+                <p class="h4">{{ stats.countryTotal }}</p>
                 <p class="h5">Countries</p>
             </div>
             <div class="d-flex flex-column align-content-center text-center col my-4">
                 <div><img src="{{ asset('build/images/icon-organizations.svg') }}" class="home-svg" height="50" alt="Projects"></div>
-                <p class="h4">{{ stats.3 }}</p>
+                <p class="h4">{{ stats.organizationTotal }}</p>
                 <p class="h5">Organizations</p>
             </div>
         </div>
