--- a/templates/component/project/_project_tasks.html.twig
+++ b/templates/component/project/_project_tasks.html.twig
@@ -4,42 +4,51 @@
 
             <h1>All tasks in this project</h1>
             <a href="{{ path('project_task_new', {'id' : project.id}) }}">Create a new task</a>
+            <div class="col align-self-end">
+            <a class="align-content-end" href="{{ path('project_show_table', {'id' : project.id}) }}">Switch to table vue</a>
+            </div>
         </div>
-        {% for task in project.tasks %}
+
+        {% for task in tasks %}
             <div class="flex-row">
+
                 <div class="card task m-1" style="width: 18rem;">
                     <div class="card-body">
 
                         {% if task.status == 0 %}
-                            <span class="bg-danger text-light mb-1">Pending attribution </span>
+                            <span class="bg-secondary text-light mb-1">Pending attribution </span>
 
                         {% elseif task.status == 1 %}
-                            <span class="bg-info text-light mb-1">In progress </span>
+                            <span class="bg-blueish text-light mb-1">In progress </span>
                         {% elseif task.status == 2 %}
-                            <span class="bg-success text-light mb-1">Achieved </span>
-                            <small class="card-subtitle text-muted"> on : <cite>{{ task.updatedAt|date('Y-m-d') }}</cite></small>
+                            <span class="bg-greenish text-light mb-1">Achieved </span>
                         {% endif %}
 
                         <h5 class="card-title">{{ task.name }}</h5>
-
-                        {% if task.status == 0 or task.status == 1%}
+                        {% if task.status == 0 or task.status == 1 %}
                             <p class="card-text">{{ task.description }}</p>
 
-                            <p>  <small class="card-subtitle text-muted">Attributed to : {% for user in task.users %}
+                            <p><small class="card-subtitle text-muted">Attributed to : {% for user in task.users %}
                                         <cite>{{ user.firstname }}</cite>
                                     {% endfor %}</small></p>
-                            <p> <small class="card-subtitle text-muted">Created on : <cite>{{ task.createdAt|date('Y-m-d') }}</cite></small></p>
+                            <p><small class="card-subtitle text-muted">Deadline :
+                                    <cite>{{ task.deadline|date('Y-m-d') }}</cite></small></p>
 
-                            <a class="card-link btn" href="{{ path('project_task_edit', {'idTask': task.id}) }}">edit</a>
+                            <a class="card-link btn"
+                               href="{{ path('project_task_edit', {'idTask': task.id}) }}">edit</a>
                         {% endif %}
 
                         {% if task.status == 0 %}
-                            <form action="{{ path('status_attributTask', {'id' : task.id}) }}" method="post"><button class="card-link btn">Attribute this task</button></form>
+                            <form action="{{ path('status_attributTask', {'id' : task.id}) }}" method="post">
+                                <button class="card-link btn">Attribute this task</button>
+                            </form>
 
                         {% endif %}
 
                         {% if task.status == 1 %}
-                            <form action="{{ path('status_achievedTask', {'id' : task.id}) }}" method="post"><button class="card-link btn">Close the task</button></form>
+                            <form action="{{ path('status_achievedTask', {'id' : task.id}) }}" method="post">
+                                <button class="card-link btn">Close the task</button>
+                            </form>
                         {% endif %}
 
                     </div>
@@ -48,5 +57,6 @@
         {% else %}
             <h3>no tasks yet on this project</h3>
         {% endfor %}
+
     </div>
 </div>
